refactor(errors): поправил коды ошибок, дополнил конфиг swagger ошибками, добавил отутствующие ошибки
