# internal/handler/response.go
@@ -12,6 +12,18 @@ type ErrorResponse struct {
     Error string `json:"error"`
 }
 
+type EmptyResponse struct {
+}
+
+type IdResponse struct {
+    Id int `json:"id"`
+}
+
+type TokenResponse struct {
+    Access  string `json:"access_token"`
+    Refresh string `json:"refresh_token"`
+}
+
 func ResponseWithError(c *gin.Context, err errors.HTTPError) {
     logrus.Error(fmt.Sprintf(`[%d] %s`, err.Status(), err.Error()))
 
